crates/typestate-pipeline/tests/ui/transitions_breakpoint_with_value.stderr
error: `breakpoint` is a flag, not a key=value (write `breakpoint`, not `breakpoint = …`)
  --> tests/ui/transitions_breakpoint_with_value.rs:12:28
   |
12 |     #[transition(into = B, breakpoint = true)]
   |                            ^^^^^^^^^^
